--- a/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/browser.hbs
+++ b/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/browser.hbs
@@ -1,14 +1,14 @@
 <form onsubmit="javascript: return false;" class="form-search">
     <input type="text" class="q input-long" placeholder="{{translate "Search for media"}}">
     <img class="icon-16 hide loader" src="/extension/ezexceed/design/ezexceed/images/loader.gif" />
-    <span class="upload-container" id="remotemedia-browser-local-file-container-{{id}}">
-        <button type="button" class="btn upload upload-from-disk" id="remotemedia-browser-local-file-{{id}}">
+    <span class="upload-container" id="ngremotemedia-browser-local-file-container-{{id}}">
+        <button type="button" class="btn upload upload-from-disk" id="ngremotemedia-browser-local-file-{{id}}">
             {{translate "Upload new media"}}
         </button>
     </span>
 </form>
-<div class="remotemedia-thumbs-scroll">
-  <div class="remotemedia-thumbs"></div>
+<div class="ngremotemedia-thumbs-scroll">
+  <div class="ngremotemedia-thumbs"></div>
 </div>
 <button class="btn btn-large btn-block load-more" type="button">
     {{translate "Load more"}}
