--- a/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/scaler.hbs
+++ b/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/scaler.hbs
@@ -1,10 +1,10 @@
 <div class="customattributes"></div>
 
-<section class="remotemedia-crop">
+<section class="ngremotemedia-crop">
     <ul class="nav nav-pills inverted"></ul>
 </section>
 
-<div class="remotemedia-crop-container">
+<div class="ngremotemedia-crop-container">
     <div class="image-wrap">
         <img src="{{media}}" />
     </div>
