--- a/Resources/views/ngremotemedia_content_field.html.twig
+++ b/Resources/views/ngremotemedia_content_field.html.twig
@@ -5,9 +5,11 @@
  # - string format: either name of one of the named variations, or in the format [W]x[H]
  # - string alt_text: if set, overrides the alternative text from the image
  # - string title: used as title if set, otherwise caption from the image is used
+ # - bool   dimensions: if set to true, will add width and height to img tag. false by default.
  #}
 {% block ngremotemedia_field %}
     {% set format = parameters.format|default('') %}
+    {% set dimensions = parameters.dimensions|default(false) %}
     {% set resourceType = field.value.metaData.resource_type|default('image') %}
 
     {% if field.value.metaData.format in ['pdf', 'doc', 'docx'] %}
@@ -30,16 +32,20 @@
 
         {% if variation is defined and variation.url%}
             <img src="{{ variation.url }}"
-                {% if variation.width is not empty %} width="{{ variation.width }}"{% endif %}
-                {% if variation.height is not empty %} height="{{ variation.height }}"{% endif %}
+                {% if dimensions %}
+                    {% if variation.width is not empty %} width="{{ variation.width }}"{% endif %}
+                    {% if variation.height is not empty %} height="{{ variation.height }}"{% endif %}
+                {% endif %}
                 {% if alt_text is not empty %}alt="{{ alt_text }}"{% endif %}
                 {% if title is not empty %}title="{{ title }}"{% endif %}
                 {{ block( 'field_attributes' ) }}
             />
         {% elseif field.value.secure_url is defined and field.value.secure_url is not empty %}
             <img src="{{ field.value.secure_url }}"
-                {% if field.value.metaData.width is not empty %} width="{{ field.value.metaData.width }}"{% endif %}
-                {% if field.value.metaData.height is not empty %} height="{{ field.value.metaData.height }}"{% endif %}
+                {% if dimensions %}
+                    {% if field.value.metaData.width is not empty %} width="{{ field.value.metaData.width }}"{% endif %}
+                    {% if field.value.metaData.height is not empty %} height="{{ field.value.metaData.height }}"{% endif %}
+                {% endif %}
                 {% if alt_text is not empty %}alt="{{ alt_text }}"{% endif %}
                 {% if title is not empty %}title="{{ title }}"{% endif %}
                 {{ block( 'field_attributes' ) }}
