--- a/Resources/views/ngremotemedia_content_field.html.twig
+++ b/Resources/views/ngremotemedia_content_field.html.twig
@@ -12,9 +12,7 @@
     {% set dimensions = parameters.dimensions|default(false) %}
     {% set resourceType = field.value.metaData.resource_type|default('image') %}
 
-    {% if field.value.metaData.format in ['pdf', 'doc', 'docx'] %}
-        <a href="{{ netgen_remote_resource(field.value) }}" target="_blank">{{ field.value.resourceId }}</a>
-    {% elseif resourceType == 'image' %}
+    {% if resourceType == 'image' and field.value.metaData.format not in ['pdf', 'doc', 'docx'] %}
         {% if parameters.alt_text is defined and parameters.alt_text is not empty %}
             {% set alt_text = parameters.alt_text %}
         {% else %}
@@ -32,27 +30,28 @@
 
         {% if variation is defined and variation.url%}
             <img src="{{ variation.url }}"
-                {% if dimensions %}
-                    {% if variation.width is not empty %} width="{{ variation.width }}"{% endif %}
-                    {% if variation.height is not empty %} height="{{ variation.height }}"{% endif %}
-                {% endif %}
-                {% if alt_text is not empty %}alt="{{ alt_text }}"{% endif %}
-                {% if title is not empty %}title="{{ title }}"{% endif %}
-                {{ block( 'field_attributes' ) }}
+                    {% if dimensions %}
+                        {% if variation.width is not empty %} width="{{ variation.width }}"{% endif %}
+                        {% if variation.height is not empty %} height="{{ variation.height }}"{% endif %}
+                    {% endif %}
+                    {% if alt_text is not empty %}alt="{{ alt_text }}"{% endif %}
+                    {% if title is not empty %}title="{{ title }}"{% endif %}
+                    {{ block( 'field_attributes' ) }}
             />
         {% elseif field.value.secure_url is defined and field.value.secure_url is not empty %}
             <img src="{{ field.value.secure_url }}"
-                {% if dimensions %}
-                    {% if field.value.metaData.width is not empty %} width="{{ field.value.metaData.width }}"{% endif %}
-                    {% if field.value.metaData.height is not empty %} height="{{ field.value.metaData.height }}"{% endif %}
-                {% endif %}
-                {% if alt_text is not empty %}alt="{{ alt_text }}"{% endif %}
-                {% if title is not empty %}title="{{ title }}"{% endif %}
-                {{ block( 'field_attributes' ) }}
+                    {% if dimensions %}
+                        {% if field.value.metaData.width is not empty %} width="{{ field.value.metaData.width }}"{% endif %}
+                        {% if field.value.metaData.height is not empty %} height="{{ field.value.metaData.height }}"{% endif %}
+                    {% endif %}
+                    {% if alt_text is not empty %}alt="{{ alt_text }}"{% endif %}
+                    {% if title is not empty %}title="{{ title }}"{% endif %}
+                    {{ block( 'field_attributes' ) }}
             />
         {% endif %}
     {% elseif resourceType == 'video' %}
         {{ netgen_remote_video(field.value, format, fieldSettings.formats )|raw }}
+    {% else %}
+        <a href="{{ netgen_remote_resource(field.value) }}" target="_blank">{{ field.value.resourceId }}</a>
     {% endif %}
-
 {% endblock %}
