Remove deprecated way of using formats for video tag

--- a/Resources/views/ngremotemedia_content_field.html.twig
+++ b/Resources/views/ngremotemedia_content_field.html.twig
@@ -50,7 +50,7 @@
             />
         {% endif %}
     {% elseif resourceType == 'video' %}
-        {{ netgen_remote_video(field.value, format, fieldSettings.formats )|raw }}
+        {{ netgen_remote_video(field.value, format)|raw }}
     {% else %}
         <a href="{{ netgen_remote_resource(field.value) }}" target="_blank">{{ field.value.resourceId }}</a>
     {% endif %}
