Pass options for generating thumbs directly from the twig

--- a/Resources/views/ngremotemedia_content_field.html.twig
+++ b/Resources/views/ngremotemedia_content_field.html.twig
@@ -56,6 +56,6 @@
     {% elseif field.value.mediaType == videoConst %}
         {{ netgen_remote_video(content, field.fieldDefIdentifier, format)|raw }}
     {% else %}
-        <a href="{{ netgen_remote_resource(field.value) }}" target="_blank">{{ field.value.resourceId }}</a>
+        <a href="{{ netgen_remote_download(field.value) }}" target="_blank">{{ field.value.resourceId }}</a>
     {% endif %}
 {% endblock %}
