Do not extend EzPublishCoreBundle::content_fields.html.twig
Despite the docs, this is not necessary, and might cause problems
with field template overrides. Priority is also taken down to 0
as by default there won't be any other templates implementing
ngremotemedia_field, and leaving it at 0 leaves it free to override
with normal higher priority.

--- a/Resources/views/ngremotemedia_content_field.html.twig
+++ b/Resources/views/ngremotemedia_content_field.html.twig
@@ -1,4 +1,9 @@
-{% extends 'EzPublishCoreBundle::content_fields.html.twig' %}
+{% block field_attributes %}
+    {% spaceless %}
+        {% set attr = attr|default( {} ) %}
+        {% for attrname, attrvalue in attr %}{{ attrname }}="{{ attrvalue }}" {% endfor %}
+    {% endspaceless %}
+{% endblock %}
 
 {##
  # This field type block accepts the following parameters:
