--- a/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.css
+++ b/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.css
@@ -22,7 +22,7 @@
 .ngri-spinner:before, .ngremotemedia-type .uploading .button:before {
   content: "\e901"; }
 
-.ngremotemedia-type .uploading .button:before {
+.ngremotemedia-type .uploading .button:before, #ngremotemedia-modal .with-loader .loader, #ngremotemedia-modal .load-more .loader {
   display: inline-block;
   -webkit-animation: ngri-spin 2s infinite linear;
   animation: ngri-spin 2s infinite linear; }
@@ -41,6 +41,12 @@
   100% {
     -webkit-transform: rotate(359deg);
     transform: rotate(359deg); } }
+#ngremotemedia-modal .form-search .form-group {
+  content: "";
+  display: table;
+  width: 100%;
+  clear: both; }
+
 .ngremotemedia-type .uploading .button:before {
   margin-right: 4px; }
 .ngremotemedia-type .uploading {
@@ -214,7 +220,8 @@
     top: 50px;
     left: 40px;
     right: 40px;
-    bottom: 25px; }
+    bottom: 25px;
+    padding-right: 25px; }
   #ngremotemedia-modal .close {
     background: #fff url(close.png) center center no-repeat;
     height: 20px;
@@ -226,13 +233,26 @@
     top: 10px;
     right: 10px;
     opacity: 1; }
+  #ngremotemedia-modal .with-loader {
+    position: relative; }
+    #ngremotemedia-modal .with-loader .loader {
+      position: absolute;
+      top: 50%;
+      right: 10px;
+      margin-top: -8px; }
   #ngremotemedia-modal .form-search {
     padding-bottom: 10px;
     margin-bottom: 20px;
     border-bottom: 1px solid #555; }
+    #ngremotemedia-modal .form-search .with-loader {
+      width: 50%; }
     #ngremotemedia-modal .form-search .btn {
       box-shadow: none;
       line-height: 16px; }
+    #ngremotemedia-modal .form-search .upload-container {
+      float: right; }
+    #ngremotemedia-modal .form-search label {
+      color: #eee; }
   #ngremotemedia-modal .ngremotemedia-thumbs .item img {
     border: none;
     width: 100%; }
@@ -245,16 +265,12 @@
     width: 80%;
     box-shadow: none;
     line-height: 16px; }
-  #ngremotemedia-modal .loader.icon-16 {
-    height: 16px;
-    width: 16px;
-    max-width: 16px;
-    vertical-align: middle; }
+    #ngremotemedia-modal .load-more .loader {
+      display: inline-block; }
   #ngremotemedia-modal .well {
     color: #fff; }
-
-#ngremotemedia-modal .form-search .loader {
-  margin: 0px 10px 0px -24px; }
+  #ngremotemedia-modal .ngremotemedia-remote-folders {
+    width: 98%; }
 
 #ngremotemedia-modal .upload-backdrop {
   background: #000 url(./ngremotemedia_upload.svg) no-repeat 50% 50%;
