--- a/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/browser.hbs
+++ b/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/browser.hbs
@@ -1,7 +1,7 @@
 <form onsubmit="javascript: return false;" class="form-search">
 
     <div class="form-group">
-        <label for="ngremotemedia-remote-folder-select">Folder:</label>
+        <label for="ngremotemedia-remote-folder-select">{{translate "Folder"}}:</label>
         <select class="ngremotemedia-remote-folders" id="ngremotemedia-remote-folder-select">
             <option>All</option>
         </select>
