--- a/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.scss
+++ b/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.scss
@@ -173,7 +173,7 @@
   }
   .well {color: #fff;}
 
-  .ngremotemedia-remote-folders{width:98%;}
+  .ngremotemedia-remote-folders, .ngremotemedia-remote-media-type-select{width:98%;}
 }
 
 #ngremotemedia-modal{
