Browser folder all

--- a/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/browser.hbs
+++ b/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/browser.hbs
@@ -13,7 +13,7 @@
         <label for="ngremotemedia-remote-folder-select">{{translate "Folder"}}:</label>
         <select class="ngremotemedia-remote-folders" id="ngremotemedia-remote-folder-select">
             <option class="loading">{{translate "Loading..."}}</option>
-            <option value="root">{{translate "Root folder"}}</option>
+            <option value="all">{{translate "All"}}</option>
         </select>
     </div>
 
