--- a/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/scaler.hbs
+++ b/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/scaler.hbs
@@ -1,3 +1,5 @@
+<button class="btn btn-primary js-save">{{translate "Save all"}}</button>
+
 <div class="customattributes"></div>
 
 <section class="ngremotemedia-crop">
