--- a/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.css
+++ b/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.css
@@ -172,6 +172,8 @@
       background-image: -o-linear-gradient(top, #ffbb00, #ff8d00);
       background-image: linear-gradient(top, #ffbb00, #ff8d00);
       border-color: transparent; }
+    .ngremotemedia-crop .nav-pills > li.cropped a {
+      border-color: red; }
   .ngremotemedia-crop .nav-pills a {
     display: block;
     padding: 8px 12px;
