--- a/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.scss
+++ b/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.scss
@@ -121,6 +121,7 @@
   .nav-pills {display: table; clear: both; margin: 0 0 20px; list-style: none;
     > li {float: left;
       &.active a {color: #000; background-color: #ffbb00; @include gradient(#ffbb00, #ff8d00); border-color: transparent;}
+      &.cropped a{border-color:red;}
     }
     a {display: block; padding: 8px 12px; margin: 0 2px; color: #ccc; border-radius: 5px; background: transparent; border: 1px solid #ccc; @include transition(all, 0.2s, ease-in-out);
       &:hover,
