--- a/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/scaler.hbs
+++ b/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/scaler.hbs
@@ -1,4 +1,8 @@
-<button class="btn btn-primary js-save">{{translate "Save all"}}</button>
+{{#if singleVersion}}
+    <button class="btn btn-primary js-generate">{{translate "Generate"}}</button>
+{{else}}
+    <button class="btn btn-primary js-save">{{translate "Save all"}}</button>
+{{/if}}
 
 <div class="customattributes"></div>
 
