--- a/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.scss
+++ b/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.scss
@@ -173,7 +173,7 @@
       @extend %ngri-spin;
     }
   }
-  .well {color: #fff;}
+  .well label {color: #fff;}
 
   .ngremotemedia-remote-folders, .ngremotemedia-remote-media-type-select{width:98%;}
 }
