--- a/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.css
+++ b/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.css
@@ -196,7 +196,9 @@
   position: fixed;
   height: 100%;
   width: 100%;
-  z-index: 1000; }
+  z-index: 1000;
+  top: 0;
+  left: 0; }
   #ngremotemedia-modal .backdrop {
     z-index: 100000;
     position: absolute;
