--- a/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/modal.hbs
+++ b/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/modal.hbs
@@ -1,5 +1,5 @@
 <div class="backdrop"/>
 <div class="content">
-    <a href="#" class="js-close close">x</a>
+    <a href="#" class="js-close close"></a>
     <div class="in"></div>
 </div>
