--- a/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/scaler.hbs
+++ b/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/scaler.hbs
@@ -1,9 +1,3 @@
-{{#if singleVersion}}
-    <button class="btn btn-primary js-generate">{{translate "Generate"}}</button>
-{{else}}
-    <button class="btn btn-primary js-save">{{translate "Save all"}}</button>
-{{/if}}
-
 <div class="customattributes"></div>
 
 <section class="ngremotemedia-crop">
@@ -14,4 +8,14 @@
     <div class="image-wrap">
         <img src="{{media}}" />
     </div>
+</div>
+
+
+<div class="ngremote-actions">
+    <button class="btn btn-default js-close">{{translate "Cancel"}}</button>
+    {{#if singleVersion}}
+        <button class="btn btn-primary js-generate">{{translate "Generate"}}</button>
+    {{else}}
+        <button class="btn btn-primary js-save">{{translate "Save all"}}</button>
+    {{/if}}
 </div>
